configured header and footer

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<div class="container">
+  <small class="mb-1">Created by: Yves Ruosch</small>
+  <small>&copy; Copyright {{today | date:'yyyy-MM-dd'}} - All Rights Reserved</small>
+</div>
