--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,12 @@
 <div class="container">
-  <button pButton type="button" label="Zinsen" class="p-button-outlined p-button-danger"></button>
+  <div class="header">
+    <div class="ml-2 logo">
+      <img src="assets/ffhs-projektbericht-logo01.png" alt="logo" style="width:120px;">
+    </div>
+    <h1 class="zinsen">Azure Cloud Zinsen</h1>
+    <div>
+      <h4 class="ffhs">FFHS <br> Advanced Cloud Computing</h4>
+    </div>
+  </div>
 </div>
 
