--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,8 +1,23 @@
 .container {
-  margin: 0 0 2rem 0;
-  box-shadow: 0 2px 10px rgb(255 0 0 / 0.5);
+  box-shadow: 0 2px 10px rgb(0 0 0 / 0.5);
+  padding: 1rem 0 1em 0;
 
-  button {
-    margin: 1rem;
+  .header {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    .zinsen {
+      display: flex;
+      justify-content: center;
+      color: #438dff;
+    }
+
+    .ffhs {
+      display: flex;
+      margin-right: 1rem;
+      justify-content: flex-end;
+      color: #d55757;
+      text-align: end;
+    }
   }
 }
