--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -4,7 +4,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-color: #0a720a;
+  background-color: #1a8e1a;
   box-shadow: 0 -2px 10px rgb(0 0 0 / 0.5);
   color: white;
 }
