--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -9,6 +9,15 @@
   width: 110%;
 }
 
+.error {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  width: 100%;
+}
+
 .content {
   margin: 3rem 5rem 0 5rem;
   max-width: 80rem;
