--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+.p-inputnumber-buttons-horizontal .p-inputnumber-input {
+  max-width: 5rem;
+}
+
