--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -91,7 +91,7 @@
   </p-accordion>
   <div class="content mt-5">
     <div class="table">
-      <p-table [value]="zinsen" [resizableColumns]="true" [responsiveLayout]="'scroll'">
+      <p-table [value]="zinsen">
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="produkt">Produkt
