--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 :host {
   width: 100%;
+  height:  100%;
   margin: 0 5rem 5rem 5rem;
 }
 
@@ -40,7 +41,6 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-
 
   .table {
     width: 100%;
