--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="header">
     <div class="ml-2 logo">
-      <img src="assets/ffhs-projektbericht-logo01.png" alt="logo" style="width:120px;">
+      <img src="assets/ffhs-projektbericht-logo01.png" alt="logo" style="width:100px;"> <br>
+      <span class="version">{{this.version}}</span>
     </div>
     <h1 class="zinsen">Azure Cloud Zinsen</h1>
     <div>
@@ -9,4 +10,3 @@
     </div>
   </div>
 </div>
-
