--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -6,6 +6,10 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 
+    .version {
+      color: #d55757;
+    }
+
     .zinsen {
       display: flex;
       justify-content: center;
