--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -42,7 +42,7 @@
                   label="Start"
                   [disabled]="loops.invalid || isLoading"
                   (click)="startSimulation()"></button>
-          <h4 class="ml-2">Erfolgreiche Durchläufe: {{successCount}} / {{loops.value}}</h4>
+          <h4 class="ml-2">Erfolgreiche Requests: {{successCount}} / {{loops.value}}</h4>
         </div>
       </div>
     </p-accordionTab>
