UI styling improved

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <small class="mb-1">Created by: Yves Ruosch</small>
-  <small>&copy; Copyright {{today | date:'yyyy-MM-dd'}} - All Rights Reserved</small>
+  <small class="mb-1">&copy; Copyright {{today | date:'yyyy-MM-dd'}} - All Rights Reserved</small>
+  <small class="version">Version {{version.versionLong}}</small>
 </div>
