--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -7,4 +7,8 @@
   background-color: #1a8e1a;
   box-shadow: 0 -2px 10px rgb(0 0 0 / 0.5);
   color: white;
+
+  .version {
+    color: #d55757;
+  }
 }
