--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,22 +6,29 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: auto auto 1fr;
+  grid-template-rows: 1fr auto;
   grid-template-columns: 1fr;
   align-self: center;
-  min-height: 100%;
+  height: 100%;
   background-color: white;
+}
+
+header {
+  position: fixed;
+  width: 100%;
+  background: white;
+  z-index: 999;
 }
 
 main {
   display: flex;
   justify-content: center;
+  height: 100%;
   padding: 10px 10px 100px;
 }
 
 footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 70px;
 }
