--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -1,12 +1,12 @@
 :host {
   width: 100%;
   height:  100%;
-  margin: 0 5rem 5rem 5rem;
+  margin: 8rem 5rem 0 5rem;
 }
 
 .progress {
-  position: absolute;
-  overflow: hidden;
+  position: fixed;
+  z-index: 999;
   left: 0;
   top: 113px;
   width: 100%;
