--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,8 +1,7 @@
 <div class="container">
   <div class="header">
     <div class="ml-2 logo">
-      <img src="assets/ffhs-projektbericht-logo01.png" alt="logo" style="width:100px;"> <br>
-      <span class="version">{{this.version}}</span>
+      <img src="assets/ffhs-projektbericht-logo01.png" alt="logo" style="width:120px;">
     </div>
     <h1 class="zinsen">Azure Cloud Zinsen</h1>
     <div>
